# Aptitude

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
books/: en_words_list.txt
character_relation/: config.py  criteria.py  criteria_formatter.py  criteria_identifier.py  infer.py  model.py  train.py
character_relation/character_relation_model/: keras_metadata.pb  saved_model.pb
character_relation/character_relation_model/variables/: variables.index
character_relation/data/: criteria_data  criteria_formatter.py  dataset  generate_dataset.py  words.py  words.txt  words_zh.py
character_relation/data/raw/: character_relation_criteria.txt  filler_words.txt
character_relation/en_character_relation_model/variables/: variables.index
drafts/: characterization.py  characterization_results.txt  compare_ideas.py  decorator_test.py  dep_adj_parser.py  entity_isolation.py  google_handwriting.py  parser_test.py  sample.aptitude  stat_intersect.py  tokenized_alice.py  tokenized_alice.txt  tokenized_alice.xlsx  topological_sort.py
src/aptitude/: config.py  main.py
src/aptitude/literary_devices/: literary_device.py
src/aptitude/literary_devices/characterization/: characterization.py
src/aptitude/literary_devices/metaphor/: metaphor.py
src/aptitude/literary_devices/simile/: simile.py
src/aptitude/literary_devices/symbolism/: symbolism.py
src/aptitude/nodes/: nlp.py  text.py
src/aptitude/pipeline/: generator.py  node.py  parser.py  pipeline.py
src/aptitude/util/: serialization.py  text.py  types.py
tests/: test_dependencies.py
(+3 files in other folders)
