[metadata]
name = aptitude
description = Annotations processor for English Language Arts
author = aquarel
license = MIT
license_file = LICENSE
platforms = win32

[options]
packages =
    aptitude
install_requires =
    spacy>=3.2.0
python_requires = >= 3.8
package_dir =
    =src
zip_safe = no


[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
aptitude = py.typed

[flake8]
max-line-length = 160